# ARB-T

./: README.md  pyproject.toml  requirements.txt
arb_t/: model.py
arb_t/core/: attention.py  internet_search.py  neural_architecture.py  self_learning.py  tokenizer.py
examples/: basic_usage.py  chat_interface.py
