[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "arb-t"
version = "0.1.0"
description = "Agentic LLM with self-learning capabilities and dynamic neural architecture"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["ai", "neural-networks", "self-learning"]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["arb_t"]
